fix(overflow): ajusto overflow de card

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
-    width: 100vw;
+
   }
 
   &__card {
@@ -116,7 +116,7 @@
 .info{
   display: flex;
   justify-content: center;
-  padding: 20px;
+  padding: 15px;
   .card{
     background-color: white;
     max-width: 650px;
